deploy/argocd/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd-healthcare.htsnov.com
      secretName: tls-secret-argocd-new
  rules:
    - host: argocd-healthcare.htsnov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
